Pass 1: Fabric → Forge 1.20.1 port scaffold (Green-1, Green-2 error inventory)
Scaffolds the Fabric 26.2 → Forge 1.20.1 port on this branch. Compiles a jar,
launches client and dedicated server, zero registry errors (Green-1). Does
NOT compile clean yet — compileJava still fails with ~1,105 categorized
errors by design; this commit is the checkpoint for that error-inventory
pass (Green-2), not a working build.

- Remove Fabric-only surface: src/client/java split, fabric.mod.json,
  nekomasfixed.accesswidener; consolidate into single Forge source set
- Add Forge entrypoints/bus handlers: ForgeBusEvents, ModBusEvents,
  ModBusClientEvents, NekomasFixedClient, ClientSyncHandler, Registries,
  NekomasFixedDataGenerator
- Add DeferredRegister-based registries (registries/, ModArmorMaterials,
  EntityAttributesAndSpawns, WildfireRegistrations) replacing Fabric
  registry calls; new nekomasfixed.mixins.json / .client.mixins.json
- Add Flammable* block subclasses (Forge has no FlammableBlockRegistry)
- Add MenuType-based screens (KilnScreen, PyrotechnicsTableScreen,
  ScreenRegistration) + Cloth Config integration
- Tree-wide singular→plural datapack rename under data/nekomasfixed,
  data/minecraft, assets/nekomasfixed to match 1.20.1 conventions
  (fixes recipes/advancements/loot that were 100% invisible)
- Switch build tooling to ForgeGradle: build.gradle, gradle.properties,
  settings.gradle, libs.versions.toml, gradlew, CI workflow