@@ -2,7 +2,7 @@ package net.greenjab.nekomasfixed.registry.entity.goal;
 
 import net.greenjab.nekomasfixed.registry.entity.Moobloom.Moobloom;
 import net.minecraft.world.entity.ai.goal.Goal;
-import net.minecraft.world.entity.animal.bee.Bee;
+import net.minecraft.world.entity.animal.Bee;
 import java.util.List;
 
 public class PollinatingMoobloomGoal extends Goal {
@@ -17,7 +17,7 @@ public class PollinatingMoobloomGoal extends Goal {
         List<Moobloom> list = bee.level().getEntitiesOfClass(Moobloom.class, bee.getBoundingBox().inflate(8), entity -> !entity.getEntityData().get(Moobloom.SHEARED));
         if (list.isEmpty()) {return false;}
 
-        this.target = list.getFirst();
+        this.target = list.get(0);
         return true;
     }
 
